Fix hero word spacing, add wrangler config for Cloudflare deploy

--- a/app/home.module.css
+++ b/app/home.module.css
@@ -27,6 +27,11 @@
   vertical-align: bottom;
   padding-bottom: 0.08em;
   margin-bottom: -0.08em;
+  margin-right: 0.24em;
+}
+
+.wordMask:last-child {
+  margin-right: 0;
 }
 
 .word {
